# ros_lab_solution

color_vision/: CMakeLists.txt  package.xml
color_vision/src/: color_vision.cpp
intro_to_motion/src/: Irobot.cpp  Irobot.h  main.cpp
irobot_ir_calibrate/: CMakeLists.txt  package.xml
irobot_ir_calibrate/src/: IrobotCalibrate.cpp  IrobotCalibrate.h  main.cpp
line_follower/: CMakeLists.txt  package.xml
line_follower/src/: RoboSensor.cpp  RoboSensor.h  main.cpp
marek/: CMakeLists.txt  package.xml
marek/src/: object_detect.cpp  object_detect.cpp~  object_detect.h  object_detect.h~  object_detect_node.cpp
state_machine/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
state_machine/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
state_machine/catkin_generated/installspace/: state_machine.pc  state_machineConfig.cmake
state_machine/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
state_machine/devel/lib/pkgconfig/: state_machine.pc
state_machine/devel/share/state_machine/cmake/: state_machineConfig.cmake
state_machine/gtest/: CTestTestfile.cmake  Makefile
state_machine/src/: RoboState.cpp  RoboState.h  main.cpp
visual_servoing/: CMakeLists.txt  package.xml
visual_servoing/src/: TrackedObject.cpp  TrackedObject.h  img_process.cpp  object.cpp  object.h  visual_servoing.cpp  visual_servoing.h  visual_servoing_node.cpp
