<?xml version="1.0"?>
<package>
  <name>irobot_ir_calibrate</name>
  <version>0.0.0</version>
  <description>The irobot_ir_calibrate package</description>

  <maintainer email="sb161@todo.todo">sb161</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gsl</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gsl</run_depend>

  <export>

  </export>
</package>